# fullstack_app_template

./: .tool-versions  README.md
backend/: pyproject.toml
backend/src/: app.py  settings.py
frontend/: .gitignore  package.json
